project2/test/test_11713020_3.spl
int a()
{
  return 0;
}
int test_11713020_3()
{
  int a;
  return 0;
}